# Metody-uczenia-maszynowego

./: .gitignore  README.md  pyproject.toml
Data/: lab3.csv
Notebooks/: MNIST_noise_lab.ipynb  MUM_BAYES_LAB.ipynb  MUM_LAB02_ScikitLearn.ipynb  MUM_LAB04_ZADANIE_big_files.ipynb  MUM_LAB1_Preprocessing.ipynb  MUM_LAB3.ipynb  MUM_ROC.ipynb  MUM_k_means.ipynb  credo_class_zad.ipynb  credo_features_lab.ipynb  deskdewing.ipynb
