[project]
name = "metody-uczenia-maszynowego"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy-stubs~=1.18.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
